--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,6 +2,9 @@ name: DPKT Pipeline
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 
+env:
+  NODE_VERSION: '18.x'
+
 jobs:
   build:
     name: Build
@@ -11,7 +14,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18.x'
+        node-version: $NODE_VERSION
     - run: |
         npm ci
         npm run build --if-present
