--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: $NODE_VERSION
+        node-version: ${{ env.NODE_VERSION }}
     - run: |
         npm ci
         npm run build --if-present
