--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,3 +19,10 @@ jobs:
         npm ci
         npm run build --if-present
         ls -l
+
+  deploy:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+    - run: |
+        ls -l
