--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,6 +19,8 @@ jobs:
         npm ci
         npm run build --if-present
         ls -l
+        pwd
+        echo "${{ vars.GITHUB_WORKSPACE }}"
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
