--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,8 +19,11 @@ jobs:
         npm ci
         npm run build --if-present
         ls -l
+        echo "********* PWD ***********"
         pwd
-        echo "${{ vars.GITHUB_WORKSPACE }}"
+        echo "*************************"
+        echo "********* Work Space ********"
+        echo ${{ vars.GITHUB_WORKSPACE }}
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
