--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,7 +23,7 @@ jobs:
         pwd
         echo "*************************"
         echo "********* Work Space ********"
-        echo ${{ vars.GITHUB_WORKSPACE }}
+        echo $GITHUB_SERVER_URL
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
