--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,7 +23,7 @@ jobs:
         pwd
         echo "*************************"
         echo "********* Work Space ********"
-        echo $GITHUB_SERVER_URL
+        echo $GITHUB_WORKSPACE
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
