--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,18 +19,14 @@ jobs:
         npm ci
         npm run build --if-present
         ls -l
-        echo "********* PWD ***********"
-        pwd
-        echo "*************************"
-        echo "********* Work Space ********"
-        echo $GITHUB_WORKSPACE
+
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
         # Artifact name
         name: build-package
         # A file, directory or wildcard pattern that describes what to upload
-        path: ${{ vars.GITHUB_WORKSPACE }}/build
+        path: $GITHUB_WORKSPACE/build
         # The desired behavior if no files are found using the provided path.
 
   deploy:
