--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,7 +26,7 @@ jobs:
         # Artifact name
         name: build-package
         # A file, directory or wildcard pattern that describes what to upload
-        path: "$GITHUB_WORKSPACE/build"
+        path: build
         # The desired behavior if no files are found using the provided path.
 
   deploy:
