checking build artifact

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -42,5 +42,5 @@ jobs:
         # Destination path
         path: build-package
     - run: |
-        cd buil-package
+        cd build-package
         ls -l
