--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,7 +15,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ env.NODE_VERSION }}
-    - run: |
+    - name: Npm Package Build
+      run: |
         npm ci
         npm run build --if-present
         ls -l
