checking branch name

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,14 +3,14 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 
 env:
-  - NODE_VERSION: '18.x'
-  - name: ENV
-    ${{ if contains(env.GITHUB_REF_NAME, 'release') }}:
-      value: release
-    ${{ elseif contains(env.GITHUB_REF_NAME, 'stage') }}:
-      value: stage
-    ${{ else }}:
-      value: dev
+  NODE_VERSION: '18.x'
+  name: ENV
+  ${{ if contains(env.GITHUB_REF_NAME, 'release') }}:
+    value: release
+  ${{ elseif contains(env.GITHUB_REF_NAME, 'stage') }}:
+    value: stage
+  ${{ else }}:
+    value: dev
 
 
 jobs:
