checking branch name

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,13 +14,14 @@ jobs:
       if: contains(${{ env.GITHUB_REF_NAME }}, 'feature')
       run: |
         echo "************* Set ENV **************"
-        echo "${{ env.GITHUB_REF_NAME }} ${{ env.ENV }}"
+        echo "${ GITHUB_REF_NAME } ${{ env.ENV }}"
         echo "************************************"
       env:
         ENV: dev
 
   build:
     name: Build
+    needs: env-check
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
