checking branch name

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,7 +14,7 @@ jobs:
       if: contains(${{ env.GITHUB_REF_NAME }}, 'feature')
       run: |
         echo "************* Set ENV **************"
-        echo "${ GITHUB_REF_NAME } ${{ env.ENV }}"
+        echo "$GITHUB_REF_NAME ${{ env.ENV }}"
         echo "************************************"
       env:
         ENV: dev
