--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,50 +14,51 @@ jobs:
       run: |
         echo "************* Set ENV **************"
         echo "$GITHUB_REF_NAME ${{ env.ENV }}"
+        echo ${{ github.ref.name }}
         echo "************************************"
       env:
         ENV: dev
 
-  build:
-    name: Build
-    needs: env-check
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-    - name: Npm Package Build
-      run: |
-        npm ci
-        npm run build --if-present
-        ls -l
+  # build:
+  #   name: Build
+  #   needs: env-check
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - name: Use Node.js
+  #     uses: actions/setup-node@v3
+  #     with:
+  #       node-version: ${{ env.NODE_VERSION }}
+  #   - name: Npm Package Build
+  #     run: |
+  #       npm ci
+  #       npm run build --if-present
+  #       ls -l
 
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.2
-      with:
-        # Artifact name
-        name: build-package
-        # A file, directory or wildcard pattern that describes what to upload
-        path: build
-        # The desired behavior if no files are found using the provided path.
+  #   - name: Upload a Build Artifact
+  #     uses: actions/upload-artifact@v3.1.2
+  #     with:
+  #       # Artifact name
+  #       name: build-package
+  #       # A file, directory or wildcard pattern that describes what to upload
+  #       path: build
+  #       # The desired behavior if no files are found using the provided path.
 
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Download a Build Artifact
-      uses: actions/download-artifact@v2.1.1
-      with:
-        # Artifact name
-        name: build-package
-        # Destination path
-        path: build-package
-    - name: Deployment
-      run: |
-        cd build-package
-        ls -l
-        echo ${{ env.ENV }}
-        echo $GITHUB_REF_NAME
+  # deploy:
+  #   name: Deploy
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #   - name: Download a Build Artifact
+  #     uses: actions/download-artifact@v2.1.1
+  #     with:
+  #       # Artifact name
+  #       name: build-package
+  #       # Destination path
+  #       path: build-package
+  #   - name: Deployment
+  #     run: |
+  #       cd build-package
+  #       ls -l
+  #       echo ${{ env.ENV }}
+  #       echo $GITHUB_REF_NAME
