--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -11,11 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set ENV
-      if: ${{ startsWith(github.ref.name, 'feature/') }}
+      if: ${{ startsWith(github.ref_name, 'feature/') }}
       run: |
         echo "************* Set ENV **************"
         echo "$GITHUB_REF_NAME ${{ env.ENV }}"
-        echo ${{ github.ref.name }}
         echo "************************************"
       env:
         ENV: dev
