--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -50,7 +50,9 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: build
+    needs: 
+    - build
+    - env-check
     steps:
     - name: Download a Build Artifact
       uses: actions/download-artifact@v2.1.1
