--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -73,5 +73,8 @@ jobs:
         echo "================================="
         echo $GITHUB_REF_NAME
         echo "======= Checking AWS Version ======="
+        echo $AWS_ACCESS_KEY_ID
+        echo $AWS_SECRET_ACCESS_KEY
         aws --version
+        aws s3api list-objects --bucket $BUCKET
         # aws s3 cp build-package s3://$BUCKET/
