checking aws cli version

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -61,6 +61,11 @@ jobs:
         name: build-package
         # Destination path
         path: build-package
+    - name: Test AWS CLI
+        id: install-aws-cli
+        uses: unfor19/install-aws-cli-action@master
+        with:
+          version: 2
     - name: Deployment
       env:
         ENV: ${{needs.env-check.outputs.ENV}}
