--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -69,17 +69,25 @@ jobs:
     - name: Deployment
       env:
         ENV: ${{needs.env-check.outputs.ENV}}
-      run: |
-        cd build-package
-        ls -l
-        BUCKET=dpkt-$ENV
-        echo "========= Bucket Name ==========="
-        echo $BUCKET
-        echo "================================="
-        echo $GITHUB_REF_NAME
-        echo "======= Checking AWS Version ======="
-        echo $AWS_ACCESS_KEY_ID
-        echo $AWS_SECRET_ACCESS_KEY
-        aws --version
-        aws s3api list-objects --bucket $BUCKET
-        # aws s3 cp build-package s3://$BUCKET/
+      uses: keithweaver/aws-s3-github-action@v1.0.0
+      with:
+        command: cp
+        source: ./build-package
+        destination: s3://dpkt-$ENV/
+        aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws_region: sp-south-1
+      # run: |
+      #   cd build-package
+      #   ls -l
+      #   BUCKET=dpkt-$ENV
+      #   echo "========= Bucket Name ==========="
+      #   echo $BUCKET
+      #   echo "================================="
+      #   echo $GITHUB_REF_NAME
+      #   echo "======= Checking AWS Version ======="
+      #   echo $AWS_ACCESS_KEY_ID
+      #   echo $AWS_SECRET_ACCESS_KEY
+      #   aws --version
+      #   aws s3api list-objects --bucket $BUCKET
+      #   # aws s3 cp build-package s3://$BUCKET/
