--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -76,7 +76,7 @@ jobs:
         destination: s3://dpkt-dev/
         aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws_region: sp-south-1
+        aws_region: ap-south-1
       # run: |
       #   cd build-package
       #   ls -l
