--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -49,7 +49,7 @@ jobs:
 
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
+    runs-on:  amazon/aws-cli
     needs: 
     - build
     - env-check
@@ -69,25 +69,27 @@ jobs:
     - name: Deployment
       env:
         ENV: ${{needs.env-check.outputs.ENV}}
-      uses: keithweaver/aws-s3-github-action@v1.0.0
-      with:
-        command: cp
-        source: ./build-package
-        destination: s3://dpkt-dev/
-        aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws_region: ap-south-1
-      # run: |
-      #   cd build-package
-      #   ls -l
-      #   BUCKET=dpkt-$ENV
-      #   echo "========= Bucket Name ==========="
-      #   echo $BUCKET
-      #   echo "================================="
-      #   echo $GITHUB_REF_NAME
-      #   echo "======= Checking AWS Version ======="
-      #   echo $AWS_ACCESS_KEY_ID
-      #   echo $AWS_SECRET_ACCESS_KEY
-      #   aws --version
-      #   aws s3api list-objects --bucket $BUCKET
-      #   # aws s3 cp build-package s3://$BUCKET/
+      # uses: keithweaver/aws-s3-github-action@v1.0.0
+      # with:
+      #   command: cp
+      #   source: ./build-package
+      #   destination: s3://dpkt-dev/
+      #   aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #   aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #   aws_region: ap-south-1
+      run: |
+        cd build-package
+        ls -l
+        BUCKET=dpkt-$ENV
+        echo "========= Bucket Name ==========="
+        echo $BUCKET
+        echo "================================="
+        echo $GITHUB_REF_NAME
+        echo "======= Checking AWS Version ======="
+        echo ${{ secrets.AWS_ACCESS_KEY_ID }}
+        echo ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws --version
+        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+        export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws s3api list-objects --bucket $BUCKET
+        # aws s3 cp build-package s3://$BUCKET/
