--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -91,5 +91,6 @@ jobs:
         aws --version
         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        expot AWS_REGION=ap-south-1
         aws s3api list-objects --bucket $BUCKET
         # aws s3 cp build-package s3://$BUCKET/
