--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,8 +18,8 @@ jobs:
       run: |
         echo "************* Set ENV **************"
         echo "Branch=$GITHUB_REF_NAME"
-        # echo ${{ github.event.head_commit.message }}
-        echo "Setting up ENV=dev"
+        echo ${{ github.event.head_commit.message }}
+        # echo "Setting up ENV=dev"
         echo "env=dev" >> "$GITHUB_OUTPUT"
         echo "************************************"
 
