--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,13 @@
 name: DPKT Pipeline
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+on: 
+  push:
+    branches:
+      - main
+      - 'feature/**'
+  pull_request:
+    branches:
+      - main
 
 env:
   NODE_VERSION: '18.x'
@@ -19,7 +26,7 @@ jobs:
         echo "************* Set ENV **************"
         echo "Branch=$GITHUB_REF_NAME"
         echo ${{ github.event.head_commit.message }}
-        # echo "Setting up ENV=dev"
+        echo "Setting up ENV=dev"
         echo "env=dev" >> "$GITHUB_OUTPUT"
         echo "************************************"
 
