--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,19 +21,20 @@ jobs:
       name: Set ENV
       if: ${{ (startsWith(github.ref_name, 'feature/')) ||  (startsWith(github.ref_name, 'main')) || (startsWith(github.ref_name, 'stage/')) }}
       run: |
+        #!/bin/bash
         echo "************* Set ENV **************"
         echo "Branch=$GITHUB_REF_NAME"
         BRANCH_PREFIX=${GITHUB_REF_NAME%/*}
         echo "Branch prefix=$BRANCH_PREFIX"
-        if [[ $BRANCH_PREFIX -eq 'stage' ]]
+        if [[ "$BRANCH_PREFIX" -eq 'stage' ]]
         then
           echo "Setting up ENV=stage"
           echo "env=stage" >> "$GITHUB_OUTPUT"  
-        elif [[ $BRANCH_PREFIX -eq 'release' ]]
+        elif [[ "$BRANCH_PREFIX" -eq 'release' ]]
         then
           echo "Setting up ENV=prod"
           echo "env=prod" >> "$GITHUB_OUTPUT"
-        elif [[ $BRANCH_PREFIX -eq 'feature' ]]
+        elif [[ "$BRANCH_PREFIX" -eq 'feature' ]]
         then
           echo "Setting up ENV=feature"
           echo "env=feature" >> "$GITHUB_OUTPUT"
