--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,11 +21,14 @@ jobs:
       name: Set ENV
       if: ${{ (startsWith(github.ref_name, 'feature/')) ||  (startsWith(github.ref_name, 'main')) || (startsWith(github.ref_name, 'stage/')) }}
       run: |
-        #!/bin/bash
         echo "************* Set ENV **************"
         echo "Branch=$GITHUB_REF_NAME"
         BRANCH_PREFIX=${GITHUB_REF_NAME%/*}
         echo "Branch prefix=$BRANCH_PREFIX"
+        if [[ 1 -eq 1 ]]
+        then
+          echo "YES"
+        fi
         if [[ "$BRANCH_PREFIX" -eq 'stage' ]]
         then
           echo "Setting up ENV=stage"
