--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,6 +7,8 @@ on:
       - 'feature/**'
       - stage/**
       - release/**
+    tags:        
+      - v0.1-alpha
 
 env:
   NODE_VERSION: '18.x'
