--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -55,7 +55,7 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
     - name: Npm Package Build
       run: |
-        npm ci
+        npm install
         npm run build --if-present
         ls -l
 
